// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompletedLocs renders for LLO 1`] = `
<Table
  columns={
    Array [
      Object {
        "align": "left",
        "header": "Requester",
        "render": [Function],
      },
      Object {
        "align": "left",
        "header": "Description",
        "render": [Function],
      },
      Object {
        "header": "Status",
        "render": [Function],
        "width": "140px",
      },
      Object {
        "align": "center",
        "header": "Closing date",
        "render": [Function],
        "width": "200px",
      },
      Object {
        "header": "Action",
        "render": [Function],
      },
    ]
  }
  data={
    Array [
      Object {
        "closedOn": "2024-03-19T16:00:00.000+01:00",
        "status": "CLOSED",
        "userIdentity": Object {},
      },
      Object {
        "closedOn": "2024-03-19T16:00:00.000+01:00",
        "status": "OPEN",
        "userIdentity": Object {},
        "voidInfo": Object {},
      },
    ]
  }
  renderEmpty={[Function]}
/>
`;

exports[`CompletedLocs renders for user 1`] = `
<Table
  columns={
    Array [
      Object {
        "align": "left",
        "header": "Legal officer",
        "render": [Function],
      },
      Object {
        "align": "left",
        "header": "Description",
        "render": [Function],
      },
      Object {
        "header": "Status",
        "render": [Function],
        "width": "140px",
      },
      Object {
        "align": "center",
        "header": "Closing date",
        "render": [Function],
        "width": "200px",
      },
      Object {
        "header": "Action",
        "render": [Function],
      },
    ]
  }
  data={
    Array [
      Object {
        "closedOn": "2024-03-19T16:00:00.000+01:00",
        "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "status": "CLOSED",
      },
      Object {
        "closedOn": "2024-03-19T16:00:00.000+01:00",
        "ownerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "status": "OPEN",
        "voidInfo": Object {},
      },
    ]
  }
  renderEmpty={[Function]}
/>
`;
